--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 osmparsing/data/denmark-latest.osm
 osmparsing/data/denmark-latest.osm.obj
+osmparsing/data/denmark-latest.osm.pbf
+osmparsing/data/faroe-islands-latest.osm
+osmparsing/data/bornholm.osm
